--- a/_includes/localhead.html
+++ b/_includes/localhead.html
@@ -1,7 +1,6 @@
 <meta charset="utf-8">
 
 {% include seo.html %}
-{% include base_path %}
 
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
@@ -11,11 +10,10 @@
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
-
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{base_path}}/assets/css/main.css">
+<link rel="stylesheet" href="assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
-<head>
-  <!-- <base target="_blank"> -->
-</head>
+<!-- <head>
+  <base target="_blank">
+</head> -->
