--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -10,25 +10,26 @@ div.highlighter-rouge, figure.highlight {
   border-radius: $border-radius;
   background-color: $code-background-color;
   box-shadow: $box-shadow;
+  font-size: $type-size-5;
 
-  &:before {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 0.5em;
-    background-color: $lighter-gray;
-    content: "\f121";
-    font-family: "fontawesome" !important;
-    font-size: $type-size-6;
-    line-height: 1;
-    text-transform: none;
-    speak: none;
-  }
+  // &:before {
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   padding: 0.5em;
+  //   background-color: $lighter-gray;
+  //   content: "\f121";
+  //   font-family: "Font Awesome 5 Free" !important;
+  //   font-size: $type-size-6;
+  //   line-height: 1;
+  //   text-transform: none;
+  //   speak: none;
+  // }
 
   .highlight {
     margin: 0;
     font-family: $monospace;
-    font-size: $type-size-7;
+    font-size: $type-size-6;
     line-height: 1.8;
   }
 }
