--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -147,11 +147,12 @@ figcaption > code,
 td > code {
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
-  font-size: $type-size-6;
+  font-size: $type-size-code;
   background: $code-background-color;
   border: 1px solid $lighter-gray;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
+  color: #e02c2c;
 
   &:before, &:after {
     letter-spacing: -0.2em;
