--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -87,6 +87,18 @@
 
 }
 
+.tag-btn {
+    margin-bottom: 5px
+}
+
+.tag-btn-blog {
+    margin-bottom: 5px
+}
+
+.anchor-link {
+    display: none;
+}
+
 $scroll_offset : 2em;
 h1:before, .anchor:before { 
     content: ''; 
