--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -36,8 +36,8 @@
 
 .page__archive {
   @include breakpoint($large) {
-    @include span(10 of 12 center);
-    @include prefix(2 of 12);
+    @include span(12 of 12 center);
+    @include prefix(0 of 12);
     @include suffix(0 of 12);
   }
 
@@ -173,6 +173,7 @@
     .btn {
       color: #fff;
       text-shadow: 1px 1px 4px rgba(#000, 0.5);
+      text-decoration: none;
     }
 
     .page__lead {
