--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -101,19 +101,14 @@
     top: 0;
     right: 0;
     margin: 5px;
-    padding: 5px 10px; /* Adjust padding as needed */
-    font-size: 1.3em; /* Adjust font size as needed */
-    border: none;
-    cursor: pointer;
+    margin-bottom: 5px;
+    padding: 5px, 0px;
+    color: #818181 !important;
+    background: $code-background-color;   
 }
 
 .copy-btn:hover {
-    background-color: #333;
-    color: #fff;
-}
-
-.copy-btn .fa {
-    margin-right: 5px;
+    background-color: mix($code-background-color, #000, 95%) !important; /* Change background color on hover */
 }
 
 
